<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/Gris"
    tools:context=".activities.SelectOptionAuthActivity">

    <include layout="@layout/action_bar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="50dp"
            android:layout_gravity="center"
            android:src="@drawable/iconomapaubicacion_light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccioneUnaOpcion"
            android:fontFamily="@font/comfortaaregular"
            android:textAlignment="center"
            android:textColor="@color/purple_01"
            android:layout_margin="40dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnYaTengoCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_01"
            android:background="@drawable/rounder_button"
            android:textColor="@color/Gris"
            android:layout_margin="20dp"
            android:fontFamily="@font/comfortaaregular"
            android:text="@string/yaTengoCuenta"
            />

        <Button
            android:id="@+id/btnRegistrarmeAhora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_01"
            android:background="@drawable/rounder_button"
            android:textColor="@color/Gris"
            android:layout_margin="20dp"
            android:fontFamily="@font/comfortaaregular"
            android:text="@string/registrarmeAhora"/>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>