<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/Gris"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:outlineAmbientShadowColor="@color/purple_01"
            android:src="@drawable/iconomapaubicacion_light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaaregular"
            android:text="@string/descripcion"
            android:textAlignment="center"
            android:textColor="@color/purple_01"
            android:layout_margin="40dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_margin="20dp">
            <Button
                android:id="@+id/btnSoyGuiaTuristico"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_01"
                android:background="@drawable/rounder_button"
                android:textColor="@color/Gris"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/comfortaaregular"
                android:text="@string/guia_turistico"

                />

            <Button
                android:id="@+id/btnSoyTurista"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_01"
                android:background="@drawable/rounder_button"
                android:textColor="@color/Gris"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/comfortaaregular"
                android:text="@string/turista"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>